# bevy_mod_sysfail

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/: all_attributes.rs  custom_failure.rs
macros_impl/: Cargo.toml  README.md
macros_impl/src/: generate.rs  lib.rs
src/: dedup.rs  emit.rs  ignore.rs  lib.rs  log.rs  log_levels.rs  log_simple.rs  logged_errors.rs
