[package]
name = "bevy_mod_sysfail"
authors = ["Nicola Papale"]
description = "Decorate your bevy system with the sysfail macro attribute to handle failure."
license = "Apache-2.0"
readme = "README.md"
keywords = ["bevy", "tool", "macro", "error", "trait"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy_mod_sysfail"
exclude = ["assets", ".github"]
version = "1.0.0"
edition = "2021"

[dependencies]
bevy_utils = "0.9"
bevy_log = "0.9"
bevy_mod_sysfail_macros = { path = "./macros_impl", version = "1.0.0" }
anyhow = { version = "1.0", default-features = false }

[dev-dependencies]
bevy = "0.9"
thiserror = "1.0"