[package]
name = "bevy_mod_sysfail_macros"
authors = ["Nicola Papale"]
description = "Macros for bevy_mod_sysfail"
license = "Apache-2.0"
readme = "README.md"
keywords = ["bevy", "tool", "macro"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy_mod_sysfail"
exclude = ["assets", ".github"]
version = "5.0.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.38", features = ["full", "proc-macro", "parsing", "clone-impls"] }
proc-macro2 = "1.0.69"
quote = "1.0.33"
